force-app/main/default/objects/Recipe__c/fields/Allergens__c.field-meta.xml
<CustomField>
    <fullName>Allergens__c</fullName>
    <label>Allergens</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Celery</fullName>
            </value>
            <value>
                <fullName>Eggs</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Gluten</fullName>
            </value>
            <value>
                <fullName>Lupins</fullName>
            </value>
            <value>
                <fullName>Milk</fullName>
            </value>
            <value>
                <fullName>Mustard</fullName>
            </value>
            <value>
                <fullName>Nuts</fullName>
            </value>
            <value>
                <fullName>Peanuts</fullName>
            </value>
            <value>
                <fullName>Sesame</fullName>
            </value>
            <value>
                <fullName>Shellfish</fullName>
            </value>
            <value>
                <fullName>Soy</fullName>
            </value>
            <value>
                <fullName>Sulphur dioxide and Sulphites</fullName>
            </value>
            <value>
                <fullName>Tree nuts</fullName>
            </value>
            <value>
                <fullName>Wheat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>