force-app/main/default/objects/Recipe__c/fields/Alternative_Cooking_Method__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Cooking_Method__c</fullName>
    <label>Alternative Cooking Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>