force-app/main/default/objects/Recipe__c/fields/Branche__c.field-meta.xml
<CustomField>
    <fullName>Branche__c</fullName>
    <label>Branche</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coffee Shop</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Snacks/Sandwich</fullName>
            </value>
            <value>
                <fullName>Roadside</fullName>
            </value>
            <value>
                <fullName>Railway</fullName>
            </value>
            <value>
                <fullName>Airline / Airport</fullName>
            </value>
            <value>
                <fullName>Ship / Port</fullName>
            </value>
            <value>
                <fullName>Sportsclub / Gym</fullName>
            </value>
            <value>
                <fullName>Sports Venue</fullName>
            </value>
            <value>
                <fullName>Visitor Attraction</fullName>
            </value>
            <value>
                <fullName>Entertainment Venue</fullName>
            </value>
            <value>
                <fullName>Camping</fullName>
            </value>
            <value>
                <fullName>Swimming / Public Pool</fullName>
            </value>
            <value>
                <fullName>Independent Hotels</fullName>
            </value>
            <value>
                <fullName>Branded Hotels</fullName>
            </value>
            <value>
                <fullName>Independent restaurant</fullName>
            </value>
            <value>
                <fullName>Fine Dining</fullName>
            </value>
            <value>
                <fullName>Branded Restaurant</fullName>
            </value>
            <value>
                <fullName>Bars &amp; Pubs</fullName>
            </value>
            <value>
                <fullName>Lighthouse Restaurant</fullName>
            </value>
            <value>
                <fullName>Buffet / Self-Service</fullName>
            </value>
            <value>
                <fullName>Branded Traditional</fullName>
            </value>
            <value>
                <fullName>Branded Emerging</fullName>
            </value>
            <value>
                <fullName>Street Food / Independent</fullName>
            </value>
            <value>
                <fullName>Business Catering</fullName>
            </value>
            <value>
                <fullName>Contract Catering</fullName>
            </value>
            <value>
                <fullName>Event Catering</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Defense / Army</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>