force-app/main/default/objects/Recipe__c/fields/Carbohydrate__c.field-meta.xml
<CustomField>
    <fullName>Carbohydrate__c</fullName>
    <label>Carbohydrate</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>