force-app/main/default/objects/Recipe__c/fields/CO2_Savings__c.field-meta.xml
<CustomField>
    <fullName>CO2_Savings__c</fullName>
    <label>CO2 Savings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>