force-app/main/default/objects/Recipe__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oven</fullName>
            </value>
            <value>
                <fullName>Pan</fullName>
            </value>
            <value>
                <fullName>Spatula</fullName>
            </value>
            <value>
                <fullName>Deep Fryer</fullName>
            </value>
            <value>
                <fullName>Air Fryer</fullName>
            </value>
            <value>
                <fullName>Pot</fullName>
            </value>
            <value>
                <fullName>Sous-vide Appliance</fullName>
            </value>
            <value>
                <fullName>BBQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>