force-app/main/default/objects/Recipe__c/fields/Fats__c.field-meta.xml
<CustomField>
    <fullName>Fats__c</fullName>
    <label>Fats</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>