force-app/main/default/objects/Recipe__c/fields/Fiber__c.field-meta.xml
<CustomField>
    <fullName>Fiber__c</fullName>
    <label>Fiber</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>