force-app/main/default/objects/Recipe__c/fields/Gluten_Free__c.field-meta.xml
<CustomField>
    <fullName>Gluten_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gluten Free</label>
    <type>Checkbox</type>
</CustomField>