force-app/main/default/objects/Recipe__c/fields/High_in_Protein__c.field-meta.xml
<CustomField>
    <fullName>High_in_Protein__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High in Protein</label>
    <type>Checkbox</type>
</CustomField>