force-app/main/default/objects/Recipe__c/fields/Image_link__c.field-meta.xml
<CustomField>
    <fullName>Image_link__c</fullName>
    <label>Image link</label>
    <type>Url</type>
</CustomField>