force-app/main/default/objects/Recipe__c/fields/Is_Channel_B2C__c.field-meta.xml
<CustomField>
    <fullName>Is_Channel_B2C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Channel B2C</label>
    <type>Checkbox</type>
</CustomField>