force-app/main/default/objects/Recipe__c/fields/Keep_Warm__c.field-meta.xml
<CustomField>
    <fullName>Keep_Warm__c</fullName>
    <label>Keep Warm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>up to 15 Minutes</fullName>
                <label>up to 15 minutes</label>
            </value>
            <value>
                <fullName>up to 30 Minutes</fullName>
                <label>up to 30 minutes</label>
            </value>
            <value>
                <fullName>up to 45 Minutes</fullName>
                <label>up to 45 minutes</label>
            </value>
            <value>
                <fullName>up to 60 Minutes</fullName>
                <label>up to 60 minutes</label>
            </value>
            <value>
                <fullName>up to 120 Minutes</fullName>
                <label>up to 120 minutes</label>
            </value>
            <value>
                <fullName>&gt;120 Minutes</fullName>
                <label>&gt;120 minutes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>