force-app/main/default/objects/Recipe__c/fields/Low_in_Carbs__c.field-meta.xml
<CustomField>
    <fullName>Low_in_Carbs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Low in Carbs</label>
    <type>Checkbox</type>
</CustomField>