force-app/main/default/objects/Recipe__c/fields/Low_in_Saturated_Fats__c.field-meta.xml
<CustomField>
    <fullName>Low_in_Saturated_Fats__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Low in Saturated Fats</label>
    <type>Checkbox</type>
</CustomField>