force-app/main/default/objects/Recipe__c/fields/Note_DE__c.field-meta.xml
<CustomField>
    <fullName>Note_DE__c</fullName>
    <label>Note DE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>