force-app/main/default/objects/Recipe__c/fields/Number_of_Calories__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Calories__c</fullName>
    <label>Number of Calories</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>