force-app/main/default/objects/Recipe__c/fields/Planted_Product__c.field-meta.xml
<CustomField>
    <fullName>Planted_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planted Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Recipes</relationshipLabel>
    <relationshipName>Recipes</relationshipName>
    <type>Lookup</type>
</CustomField>