force-app/main/default/objects/Recipe__c/fields/Preparation_Time_From_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Preparation_Time_From_Minutes__c</fullName>
    <label>Preparation Time From (Minutes)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>