force-app/main/default/objects/Recipe__c/fields/Protein__c.field-meta.xml
<CustomField>
    <fullName>Protein__c</fullName>
    <label>Protein</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>