force-app/main/default/objects/Recipe__c/fields/Recipe_Image__c.field-meta.xml
<CustomField>
    <fullName>Recipe_Image__c</fullName>
    <label>Recipe Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>