force-app/main/default/objects/Recipe__c/fields/Recipe_Name_DE__c.field-meta.xml
<CustomField>
    <fullName>Recipe_Name_DE__c</fullName>
    <label>Recipe Name DE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>