force-app/main/default/objects/Recipe__c/fields/Salt__c.field-meta.xml
<CustomField>
    <fullName>Salt__c</fullName>
    <label>Salt</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>