force-app/main/default/objects/Recipe__c/fields/Saturated_fats__c.field-meta.xml
<CustomField>
    <fullName>Saturated_fats__c</fullName>
    <label>Saturated fats</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>