force-app/main/default/objects/Recipe__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <label>Season</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Winter</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
            <value>
                <fullName>Autumn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>