force-app/main/default/objects/Recipe__c/fields/Step_11__c.field-meta.xml
<CustomField>
    <fullName>Step_11__c</fullName>
    <label>Step 11</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>