force-app/main/default/objects/Recipe__c/fields/Step_12__c.field-meta.xml
<CustomField>
    <fullName>Step_12__c</fullName>
    <label>Step 12</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>