force-app/main/default/objects/Recipe__c/fields/Sugar__c.field-meta.xml
<CustomField>
    <fullName>Sugar__c</fullName>
    <label>Sugar</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>