force-app/main/default/objects/Recipe__c/fields/Type_of_Cuisine__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Cuisine__c</fullName>
    <label>Type of Cuisine</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bowls / Salad</fullName>
            </value>
            <value>
                <fullName>Burger / American</fullName>
            </value>
            <value>
                <fullName>Central European</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Gourmet / Haute Cuisine</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Indonesian</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese/Sushi</fullName>
            </value>
            <value>
                <fullName>Kebab</fullName>
            </value>
            <value>
                <fullName>Mexican</fullName>
            </value>
            <value>
                <fullName>Middle Eastern</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sandwich</fullName>
            </value>
            <value>
                <fullName>Snacks / Sandwich</fullName>
            </value>
            <value>
                <fullName>Steak / BBQ</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Tibetian/Momo</fullName>
            </value>
            <value>
                <fullName>Vegan / Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>Swiss</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Levante</fullName>
            </value>
            <value>
                <fullName>Balkan</fullName>
            </value>
            <value>
                <fullName>British</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>