force-app/main/default/objects/Recipe__c/fields/Type_of_Food__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Food__c</fullName>
    <label>Type of Food</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Main Course</fullName>
            </value>
            <value>
                <fullName>Pasta Dishes</fullName>
            </value>
            <value>
                <fullName>Potato Dishes</fullName>
            </value>
            <value>
                <fullName>Rice dishes</fullName>
            </value>
            <value>
                <fullName>Wraps</fullName>
            </value>
            <value>
                <fullName>Bowls</fullName>
            </value>
            <value>
                <fullName>Burgers</fullName>
            </value>
            <value>
                <fullName>Salads</fullName>
            </value>
            <value>
                <fullName>Snacks</fullName>
            </value>
            <value>
                <fullName>Fingerfood</fullName>
            </value>
            <value>
                <fullName>Cold served dishes</fullName>
            </value>
            <value>
                <fullName>Condiments/Sauces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>