force-app/main/default/objects/Recipe__c/fields/Water_Savings__c.field-meta.xml
<CustomField>
    <fullName>Water_Savings__c</fullName>
    <label>Water Savings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>