force-app/main/default/objects/Recipe__c/validationRules/Carbohydrate_types.validationRule-meta.xml
<ValidationRule>
    <fullName>Carbohydrate_types</fullName>
    <active>true</active>
    <errorConditionFormula>Sugar__c &gt; Carbohydrate__c</errorConditionFormula>
    <errorDisplayField>Sugar__c</errorDisplayField>
    <errorMessage>Sugar amount can&apos;t be higher than Carbohydrate amount</errorMessage>
</ValidationRule>