force-app/main/default/objects/Recipe__c/validationRules/Type_of_fats.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_of_fats</fullName>
    <active>true</active>
    <errorConditionFormula>Saturated_fats__c &gt; Fats__c</errorConditionFormula>
    <errorDisplayField>Saturated_fats__c</errorDisplayField>
    <errorMessage>Saturated fats can&apos;t be bigger than all fats</errorMessage>
</ValidationRule>