force-app/main/default/objects/Recipe__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type_of_Cuisine__c</columns>
    <columns>Allergens__c</columns>
    <columns>Planted_Product__c</columns>
    <columns>Branche__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>